gcc/testsuite/g++.dg/diagnostic/no-type-1.C
main() {}  // { dg-error "1:ISO C\\+\\+ forbids declaration" }
